--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Linear
-description: Linear template for Jekyll
+name: He Junxian
+description: A world for me to think and learn.
 paginate: 10
